- fixed a bug in stringbuf.c related to STRINGBUF_TRIM_ALLOCSIZE, which
  wasn't supposed to be used with rsyslog. Put a warning message up that
  tells this feature is not tested and probably not worth the effort.
  Thanks to Anders Blomdell fro bringing this to our attention
- somewhat improved performance of string buffers
- fixed bug that caused invalid treatment of tabs (HT) in rsyslog.conf
---------------------------------------------------------------------------
Version 3.11.0 (rgerhards), 2008-01-31
- implemented queued actions
- implemented simple rate limiting for actions
- implemented deliberate discarding of lower priority messages over higher
  priority ones when a queue runs out of space
- implemented disk quotas for disk queues
- implemented the $ActionResumeRetryCount config directive
- added $ActionQueueFilename config directive
- added $ActionQueueSize config directive
- added $ActionQueueHighWaterMark config directive
- added $ActionQueueLowWaterMark config directive
- added $ActionQueueDiscardMark config directive
- added $ActionQueueDiscardSeverity config directive
- added $ActionQueueCheckpointInterval config directive
- added $ActionQueueType config directive
- added $ActionQueueWorkerThreads config directive
- added $ActionQueueTimeoutshutdown config directive
- added $ActionQueueTimeoutActionCompletion config directive
- added $ActionQueueTimeoutenQueue config directive
- added $ActionQueueTimeoutworkerThreadShutdown config directive
- added $ActionQueueWorkerThreadMinimumMessages config directive
- added $ActionQueueMaxFileSize config directive
- added $ActionQueueSaveonShutdown config directive
- addded $ActionQueueDequeueSlowdown config directive
- addded $MainMsgQueueDequeueSlowdown config directive
- bugfix: added forgotten docs to package
- improved debugging support
- fixed a bug that caused $MainMsgQueueCheckpointInterval to work incorrectly
- when a long-running action needs to be cancelled on shutdown, the message